styles/themes/mars-full/components/topNav.scss
.mars-top-nav {
	background: $front-mars-top-nav-bg;
	color: $front-mars-top-nav-txt-color;
	font-size: 0.95rem;

	&__container {
		align-items: center;
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: space-between;
		min-height: 50px;

		> * {
			line-height: 50px;
		}
	}

	&__contacts {
		align-items: center;
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		gap: 0 10px;
		justify-content: flex-start;
	}

	&__contact {
		align-items: center;
		display: flex;
	}

	&__contact-icon {
		color: $front-mars-top-nav-txt-color;
		margin: 0 5px 0 0;
		text-decoration: none;

		&:hover {
			color: $front-mars-top-nav-txt-color;
		}
	}

	&__contact-txt {
		color: $front-mars-top-nav-txt-color;
		position: relative;
		text-decoration: none;
		line-height: initial;

		&:hover {
			color: $front-mars-top-nav-txt-color;

			&::before {
				left: 0;
				width: 100%;
			}
		}

		&::before {
			background: $front-mars-top-nav-txt-color;
			border-radius: 4px;
			bottom: -6px;
			content: '';
			height: 2px;
			left: 50%;
			position: absolute;
			transition: all 0.35s ease-in-out;
			width: 0;
		}
	}

	&__note {
		@include media-breakpoint-down(md) {
			display: none;
		}

		p {
			margin: 0;
		}
	}

	&__menu {
		display: flex;
		flex-wrap: wrap;
		gap: 0 25px;
		margin: 0;

		@include media-breakpoint-down(md) {
			gap: 0 20px;
		}
	}

	&__menu-link {
		color: $front-mars-top-nav-menu-color;
		position: relative;
		text-decoration: none;

		&:hover {
			color: $front-mars-top-nav-menu-color;

			&::before {
				left: 0;
				width: 100%;
			}
		}

		&::before {
			background: $front-mars-top-nav-txt-color;
			border-radius: 4px;
			bottom: -6px;
			content: '';
			height: 2px;
			left: 50%;
			position: absolute;
			transition: all 0.35s ease-in-out;
			width: 0;
		}
	}
}

